<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="350dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="450dp"
        tools:layout_editor_absoluteY="10dp">

        <!-- Chat message display -->
        <TextView
            android:id="@+id/chat_message_display"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/theme_light_blue"
            android:gravity="bottom"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <!-- Message bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/gray"
            android:orientation="horizontal">

            <!-- Clear chat log button -->
            <ImageButton
                android:id="@+id/chat_reset_button"
                android:layout_width="75dp"
                android:layout_marginLeft="8dp"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/chat_reset_button_desc"
                android:src="@drawable/reset_chat"
                app:tint="@color/white" />

            <!-- Message entry -->
            <EditText
                android:id="@+id/chat_message_entry"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/light_gray"
                android:gravity="center_vertical|start"
                android:hint="@string/chat_enter_message_hint"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <!-- Message send button -->
            <ImageButton
                android:id="@+id/chat_send_button"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/chat_send_arrow_desc"
                android:src="@drawable/chat_send_arrow"
                app:tint="@color/white" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
